fix: adjusting product model for order
