# app/Http/Requests/OrderRequest.php
@@ -2,13 +2,13 @@
 
 namespace App\Http\Requests;
 
-use App\Enums\ProductStatus;
+use App\Enums\OrderStatus;
 use Illuminate\Foundation\Http\FormRequest;
 use Illuminate\Validation\Rule;
 use Illuminate\Contracts\Validation\Validator;
 use Illuminate\Http\Exceptions\HttpResponseException;
 
-class ProductRequest extends FormRequest
+class OrderRequest extends FormRequest
 {
     public function authorize(): bool
     {
@@ -18,25 +18,25 @@ class ProductRequest extends FormRequest
     public function rules(): array
     {
         return [
-            "user_name" => "required|string|max:255",
+            "customer_name" => "required|string|max:255",
             "order_date" => "required|date_format:Y-m-d H:i:s",
             "delivery_date" => "required|date_format:Y-m-d H:i:s|after:order_date",
-            "status" =>["required", Rule::enum(ProductStatus::class)],
+            "status" => ["required", Rule::enum(OrderStatus::class)],
         ];
     }
     public function messages(): array
     {
         return [
-            "user_name.required" => "O nome do usuário é obrigatório.",
-            "user_name.string" => "O nome do usuário deve ser do tipo alfa numérico.",
-            "user_name.max" => "O nome do usuário não pode exceder 255 caracteres.",
+            "customer_name.required" => "O nome do cliente é obrigatório.",
+            "customer_name.string" => "O nome do cliente deve ser do tipo alfa numérico.",
+            "customer_name.max" => "O nome do cliente não pode exceder 255 caracteres.",
             "order_date.required" => "A data do pedido é obrigatória.",
             "order_date.date_format" => "A data do pedido deve estar no formato Y-m-d H:i:s.",
             "delivery_date.required" => "A data de entrega é obrigatória.",
             "delivery_date.date_format" => "A data de entrega deve estar no formato Y-m-d H:i:s.",
             "delivery_date.after" => "A data de entrega deve ser posterior à data do pedido.",
             "status.required" => "O status é obrigatório.",
-            "status.*" => "O status deve ser um dos seguintes valores: " . implode(", ", ProductStatus::values()),
+            "status.*" => "O status deve ser um dos seguintes valores: " . implode(", ", OrderStatus::values()),
         ];
     }
 
